# SocialGaming-Platform

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  README.md  README.md~464115116f301a5b027831865f208f0a785170c2  SocialGaming.md  config.txt  main.cpp  team_contract.md
config/: Input.game  config.game  emptyConfig.game  forLoop.game  matchGameBasic.game  minimal.game  rockPaperScissors.game  testDisplay.game  testForLoop.game  testUpfrom.game
game/: CMakeLists.txt  Player.h
game/include/: CommonVariantTypes.h  Expression.h  GameConfigEdit.h  GameConfiguration.h  GameConstants.h  GameManager.h  GameNameDisplayer.h  GameParser.h  GamePerAudience.h  GamePerPlayer.h  GameRules.h  GameVariables.h  Lobby.h  LobbyManager.h  Messenger.h  NameResolver.h  ParserRulesAPI.h  Player.h  Rule.h  RuleTypes.h  RulesRunner.h  context.h  game.h  gameConfig.h  optionsDisplay.h  rockPaperScissors.h
game/src/: GameConfigEdit.cpp  GameConfiguration.cpp  GameConstants.cpp  GameManager.cpp  GameNameDisplayer.cpp  GameParser.cpp  GamePerAudience.cpp  GamePerPlayer.cpp  GameVariables.cpp  Lobby.cpp  LobbyManager.cpp  Messenger.cpp  ParserRulesAPI.cpp  Player.cpp  RulesRunner.cpp  game.cpp  main.cpp  optionsDisplay.cpp  rockPaperScissors.cpp  rock_paper_scissors_server.cpp  testOPmain.cpp
lib/: CMakeLists.txt
lib/networking/: CMakeLists.txt
lib/networking/include/: Server.h
lib/networking/src/: Client.cpp  Server.cpp
lib/user-interaction/: CMakeLists.txt
lib/user-interaction/include/: io_canned.h  io_commandline.h  io_interface.h  user_interaction.h
lib/user-interaction/src/: user_interaction.cpp  user_interaction_test.cpp
lib/web-socket-networking/: CMakeLists.txt
lib/web-socket-networking/lib/networking/include/: Server.h
lib/web-socket-networking/tools/: CMakeLists.txt
lib/web-socket-networking/tools/server/: CMakeLists.txt  chatserver.cpp
logs/: cmakeLog.txt  makeLog.txt
server/: CMakeLists.txt  chatserver.cpp
test/: CMakeLists.txt
tools/: automation.cpp  common_tools.cpp  userIdentity.cpp
tools/include/: userIdentity.h
tools/src/: user_interaction.cpp
tree-sitter/: CMakeLists.txt  demo.cpp
tree-sitter-test/: CMakeCache.txt  CMakeLists.txt  CopyRPSConfig.txt  main.cpp
web-socket-networking/: CMakeLists.txt
web-socket-networking/game/: CMakeLists.txt  Player.cpp  game.cpp  rock_paper_scissors_server.cpp
